--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test env</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test env</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
   <header>
   </header>
-
-  <main class="container">
-    <div class="row">
-      <div class='col-12'>
-
-     </div>
+  <main class="row">
+    <div class="top-section col-12 bg-light" style="z-index: -5;">
+      <div class='m-2 mb-0 pb-5'>
+        <div class="dragon-bg position-absolute"></div>
+        <div class="fog position-absolute"></div>
+        <!--mobile navbar. Should be a dropdown, but that's JS-->
+        
+        <nav class='d-md-none d-flex justify-content-start pb-5'>
+          <button class='btn btn-link text-dark' type='button'>
+            <i class="fas fa-scroll fa-2x"></i>
+          </button>
+        </nav>
+        
+        <section>
+          <h4 class="text-primary lato">"Adventurers gather forth!"</h4>
+          <h1 class='uppercase text-primary'>panAmerican fantasy convention 2021</h1>
+          <p class='p-3 bg-light border border-white'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America in Santiago, Chile.</p>
+          <h3 >2021.01.16(SAT) - 17(SUN)</h3>
+          <p>Estacion Mapocho (Mapocho Station), Santiago, Chile</p>
+        </section>
+      </div>
     </div>
   </main>
-
+  
   <footer>
   </footer>
 </body>
