--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
 <body class="bg-light">
   <div class="dragon-bg position-absolute d-none d-md-block"></div>
   <div class="fog position-absolute d-none d-md-block"></div>
-  <header>
-    <nav class="bg-dark d-none d-md-block">
+  <header class="border border-primary" style="border-bottom: 3px solid;">
+    <div class="treasure position-absolute d-none d-md-block"> </div>
+    <nav class="bg-dark d-none d-md-block translucid">
       <ul class='d-flex justify-content-end text-light w80 p-0 my-0 mx-auto lato'>
         <li><a href='#' class='text-secondary'><i class="fab fa-facebook-f"></i></a></li>
         <li><a href='#' class='text-secondary'><i class="fab fa-twitter"></i></a></li>
         <li><a href='#' class='text-secondary'>Spanish</a></li>
-        <li><a href='#' class='text-secondary'>Tickets</a></li>
-        <li><a href='#' class='text-secondary'>About</a></li>
       </ul>      
     </nav>
+    <nav class="navbar bg-white d-none d-md-block p-0 translucid border">
+      <div class="d-flex justify-content-between w80 p-0 my-0 mx-auto lato">
+        <a href="#" class="navbar-brand">
+          <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
+        </a>
+        <ul>
+          <li><a href='#'>Tickets</a></li>
+          <li><a href='#'>About</a></li>
+        </ul>
+      </div> 
+    </nav>
   </header>
+
   <main class="row m-md-auto">
     <div class="top-section col-12">
       <div class='m-2 mb-0 pb-5'>
@@ -39,7 +50,7 @@
         <section>
           <h4 class="text-primary lato">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary'>panAmerican fantasy convention 2021</h1>
-          <p class='p-3 bg-secondary border border-white'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America and the World in Santiago, Chile.</p>
+          <p class='p-3 bg-light border border-white'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America and the World in Santiago, Chile.</p>
           <h3 >2021.01.16(SAT) - 17(SUN)</h3>
           <p>Estacion Mapocho (Mapocho Station), Santiago, Chile</p>
         </section>
