add the mobile version

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body class="bg-light">
   <div class="dragon-bg position-absolute d-none d-md-block"></div>
   <div class="fog position-absolute d-none d-md-block"></div>
-  <header class="border border-primary" style="border-bottom: 3px solid;">
+  <header class="border-bottom border-primary d-none d-md-block">
     <div class="treasure position-absolute d-none d-md-block"> </div>
-    <nav class="bg-dark d-none d-md-block translucid">
-      <ul class='d-flex justify-content-end text-light w80 p-0 my-0 mx-auto lato'>
-        <li><a href='#' class='text-secondary'><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href='#' class='text-secondary'><i class="fab fa-twitter"></i></a></li>
-        <li><a href='#' class='text-secondary'>Spanish</a></li>
+    <nav class="bg-dark translucid ">
+      <ul class='d-flex justify-content-end w80 p-0 my-0 mx-auto lato'>
+        <li><a href='#' class="text-secondary"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href='#' class="text-secondary"><i class="fab fa-twitter"></i></a></li>
+        <li><a href='#' class="text-secondary">Spanish</a></li>
       </ul>      
     </nav>
-    <nav class="navbar bg-white d-none d-md-block p-0 translucid border">
+    <nav class="navbar bg-white p-0 translucid border">
       <div class="d-flex justify-content-between w80 p-0 my-0 mx-auto lato">
         <a href="#" class="navbar-brand">
           <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
@@ -55,6 +55,40 @@
           <p>Estacion Mapocho (Mapocho Station), Santiago, Chile</p>
         </section>
       </div>
+    </div>
+    <div class="position-relative d-flex flex-column justify-content-center">
+      <div class="beholder-bg position-absolute"></div>
+      <h2 class="text-secondary mx-auto lato my-3">Main Program</h2>
+      <article class="row p-3 position-relative m-2">
+        <a href="#" class="dark-bg position-absolute"></a>
+        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-dragon fa-2x"></i></div>
+        <div class="col-3 text-primary d-flex align-items-center"><h5>Concert</h5></div>
+        <div class="col-7 text-secondary d-flex align-items-center"><p>Rhapsody of Fire opens with their epic Tales of the Emerald Sword and presents 2 new tracks from their next saga</p></div>
+      </article>
+      <article class="row p-3 position-relative m-2">
+        <a href="#" class="dark-bg position-absolute"></a>
+        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-hat-wizard fa-2x"></i></div>
+        <div class="col-3 text-primary d-flex align-items-center"><h5>Cosplay</h5></div>
+        <div class="col-7 text-secondary d-flex align-items-center"><p>See your favorite characters in the flesh as the best costume makers incarnate them on stage</p></div>
+      </article>
+      <article class="row p-3 position-relative m-2">
+        <a href="#" class="dark-bg position-absolute"></a>
+        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-dice-d20 fa-2x"></i></div>
+        <div class="col-3 text-primary d-flex align-items-center"><h5>D&D Games</h5></div>
+        <div class="col-7 text-secondary d-flex align-items-center"><p>The best Dungeon Masters await to guide you and your party through adventure and peril, for legends to be created!</p></div>
+      </article>
+      <article class="row p-3 position-relative m-2">
+        <a href="#" class="dark-bg position-absolute"></a>
+        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-paint-brush fa-2x"></i></div>
+        <div class="col-3 text-primary d-flex align-items-center"><h5>Art Gallery</h5></div>
+        <div class="col-7 text-secondary d-flex align-items-center"><p>Inmortalized Heroes by the hands of proffesional illustrators</p></div>
+      </article>
+      <article class="row p-3 position-relative m-2">
+        <a href="#" class="dark-bg position-absolute"></a>
+        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-ring fa-2x"></i></div>
+        <div class="col-3 text-primary d-flex align-items-center"><h5>Lord Of The Rings</h5></div>
+        <div class="col-7 text-secondary d-flex align-items-center"><p>See the original artifacts wielded by the fellowship, and meet John Rhys-Davies, AKA Gimli Son of Gloin </p></div>
+      </article>
     </div>
   </main>
   
