--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <header class="border-bottom border-primary d-none d-md-block">
     <div class="treasure position-absolute d-none d-md-block"> </div>
     <nav class="bg-dark translucid ">
-      <ul class='d-flex justify-content-end w80 p-0 my-0 mx-auto lato'>
+      <ul class='d-flex justify-content-end w75 p-0 my-0 mx-auto lato'>
         <li><a href='#' class="text-secondary"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href='#' class="text-secondary"><i class="fab fa-twitter"></i></a></li>
         <li><a href='#' class="text-secondary">Spanish</a></li>
       </ul>      
     </nav>
     <nav class="navbar bg-white p-0 translucid border">
-      <div class="d-flex justify-content-between w80 p-0 my-0 mx-auto lato">
+      <div class="d-flex justify-content-between w75 p-0 my-0 mx-auto lato">
         <a href="#" class="navbar-brand">
           <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
         </a>
@@ -47,7 +47,7 @@
 
         <div class="d-none d-md-flex spacer"> </div>
         
-        <section>
+        <section class="w75 mx-auto">
           <h4 class="text-primary lato">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary'>panAmerican fantasy convention 2021</h1>
           <p class='p-3 bg-light border border-white'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America and the World in Santiago, Chile.</p>
@@ -56,40 +56,117 @@
         </section>
       </div>
     </div>
-    <div class="position-relative d-flex flex-column justify-content-center">
+    
+    <section class="position-relative">
       <div class="beholder-bg position-absolute"></div>
-      <h2 class="text-secondary mx-auto lato my-3">Main Program</h2>
-      <article class="row p-3 position-relative m-2">
-        <a href="#" class="dark-bg position-absolute"></a>
-        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-dragon fa-2x"></i></div>
-        <div class="col-3 text-primary d-flex align-items-center"><h5>Concert</h5></div>
-        <div class="col-7 text-secondary d-flex align-items-center"><p>Rhapsody of Fire opens with their epic Tales of the Emerald Sword and presents 2 new tracks from their next saga</p></div>
-      </article>
-      <article class="row p-3 position-relative m-2">
-        <a href="#" class="dark-bg position-absolute"></a>
-        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-hat-wizard fa-2x"></i></div>
-        <div class="col-3 text-primary d-flex align-items-center"><h5>Cosplay</h5></div>
-        <div class="col-7 text-secondary d-flex align-items-center"><p>See your favorite characters in the flesh as the best costume makers incarnate them on stage</p></div>
-      </article>
-      <article class="row p-3 position-relative m-2">
-        <a href="#" class="dark-bg position-absolute"></a>
-        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-dice-d20 fa-2x"></i></div>
-        <div class="col-3 text-primary d-flex align-items-center"><h5>D&D Games</h5></div>
-        <div class="col-7 text-secondary d-flex align-items-center"><p>The best Dungeon Masters await to guide you and your party through adventure and peril, for legends to be created!</p></div>
-      </article>
-      <article class="row p-3 position-relative m-2">
-        <a href="#" class="dark-bg position-absolute"></a>
-        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-paint-brush fa-2x"></i></div>
-        <div class="col-3 text-primary d-flex align-items-center"><h5>Art Gallery</h5></div>
-        <div class="col-7 text-secondary d-flex align-items-center"><p>Inmortalized Heroes by the hands of proffesional illustrators</p></div>
-      </article>
-      <article class="row p-3 position-relative m-2">
-        <a href="#" class="dark-bg position-absolute"></a>
-        <div class="col-2 text-secondary d-flex align-items-center"><i class="fas fa-ring fa-2x"></i></div>
-        <div class="col-3 text-primary d-flex align-items-center"><h5>Lord Of The Rings</h5></div>
-        <div class="col-7 text-secondary d-flex align-items-center"><p>See the original artifacts wielded by the fellowship, and meet John Rhys-Davies, AKA Gimli Son of Gloin </p></div>
-      </article>
-    </div>
+      <div class="dark-bg position-absolute" style="opacity: 0.4;"></div>
+      <div class="program-grid mx-3 mx-md-auto mt-3 w75">
+        <h2 class="text-secondary mx-auto lato p-3 program-title align-self-center">Adventure Plan</h2>
+        <article class="row position-relative p-3 dragon">
+          <div class="dark-bg position-absolute"></div>
+          <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-dragon fa-2x"></i></div>
+          <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Concert</h6></div>
+          <div class="col-7 col-md-12 text-secondary d-flex"><p>Rhapsody of Fire opens with their epic Tales of the Emerald Sword</p></div>
+        </article>
+        <article class="row position-relative p-3 hat">
+          <div class="dark-bg position-absolute"></div>
+          <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-hat-wizard fa-2x"></i></div>
+          <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Cosplay</h6></div>
+          <div class="col-7 col-md-12 text-secondary d-flex"><p>See your favorite characters on stage</p></div>
+        </article>
+        <article class="row position-relative p-3 dice">
+          <div class="dark-bg position-absolute"></div>
+          <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-dice-d20 fa-2x"></i></div>
+          <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>D&D Games</h6></div>
+          <div class="col-7 col-md-12 text-secondary d-flex"><p>The best Dungeon Masters await for legends to be created!</p></div>
+        </article>
+        <article class="row position-relative p-3 paint">
+          <div class="dark-bg position-absolute"></div>
+          <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-paint-brush fa-2x"></i></div>
+          <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Art Gallery</h6></div>
+          <div class="col-7 col-md-12 text-secondary d-flex"><p>Inmortalized Heroes by the hands of proffesional illustrators</p></div>
+        </article>
+        <article class="row position-relative p-3 ring">
+          <div class="dark-bg position-absolute"></div>
+          <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-ring fa-2x"></i></div>
+          <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Lord Of The Rings</h6></div>
+          <div class="col-7 col-md-12 text-secondary d-flex"><p>See the original artifacts wielded by the fellowship</p></div>
+        </article>
+        <button class="bg-primary text-secondary p-5 m-5 d-md-none">Join PanAmerican Fantasy Convention 2021</button>
+        <h6 class="align-self-center mx-auto program-link d-none d-md-block" style="text-decoration: underline; text-transform: uppercase;"><a href="#" class="text-secondary">see the whole program</a></h6>
+      </div>
+    </section>
+
+    <section class="position-relative">
+      <div class="lion-bg position-absolute mt-5"></div>
+      <div class="speakers mx-3 mx-md-auto mt-3 w75 row">
+        <h2 class="text-dark mx-auto lato p-3 text-center">Champions Heed the Call</h2>
+        <div class="col-md-6 row position-relative">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>Lucca Turilli</h5>
+            <p class="text-primary font-italic mb-1">Founder, Composer and Guitarrist</p>
+            <p class="mb-1">Lucca has been composing epic metal symphonies for more than 20 years, and is here to recall and to present</p>
+          </div>
+        </div>
+        <div class="col-md-6 row position-relative">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>John Rhys-Davies</h5>
+            <p class="text-primary font-italic mb-1">Actor, AKA Gimli, Son of Gloin</p>
+            <p class="mb-1">Meet the Axe of the Fellowship in the flesh as he speaks of his time in his most epic role</p>
+          </div>
+        </div>
+        <div class="col-md-6 row position-relative d-none d-md-flex">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>Lucca Turilli</h5>
+            <p class="text-primary font-italic mb-1">Founder, Composer and Guitarrist</p>
+            <p class="mb-1">Lucca has been composing epic metal symphonies for more than 20 years, and is here to recall and to present</p>
+          </div>
+        </div>
+        <div class="col-md-6 row position-relative d-none d-md-flex">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>John Rhys-Davies</h5>
+            <p class="text-primary font-italic mb-1">Actor, AKA Gimli, Son of Gloin</p>
+            <p class="mb-1">Meet the Axe of the Fellowship in the flesh as he speaks of his time in his most epic role</p>
+          </div>
+        </div>
+        <div class="col-md-6 row position-relative d-none d-md-flex">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>Lucca Turilli</h5>
+            <p class="text-primary font-italic mb-1">Founder, Composer and Guitarrist</p>
+            <p class="mb-1">Lucca has been composing epic metal symphonies for more than 20 years, and is here to recall and to present</p>
+          </div>
+        </div>
+        <div class="col-md-6 row position-relative d-none d-md-flex">
+          <div class="col-4 d-flex align-items-center justify-content-center">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+          </div>
+          <div class="col-8 p-2">
+            <h5>John Rhys-Davies</h5>
+            <p class="text-primary font-italic mb-1">Actor, AKA Gimli, Son of Gloin</p>
+            <p class="mb-1">Meet the Axe of the Fellowship in the flesh as he speaks of his time in his most epic role</p>
+          </div>
+        </div>
+        <div class="d-flex d-md-none border border-dark justify-content-center">
+          <button class='btn btn-link text-dark lato' style="text-decoration: none;" type='button'>MORE</button>
+        </div>
+      </div>
+    </section>
+
   </main>
   
   <footer>
