fixed navbar mobile button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <!--mobile navbar. Should be a dropdown, but that's JS-->
         <nav class='d-md-none d-flex justify-content-start pb-5'>
-          <button class='btn btn-link text-dark' type='button'>
+          <button class='btn btn-link text-dark bg-secondary translucid' type='button' style="border-radius: 50%;">
             <i class="fas fa-scroll fa-2x"></i>
           </button>
         </nav>
