fix padding fot bottom of footer

--- a/index.html
+++ b/index.html
@@ -175,13 +175,12 @@
         <h5 class="lato text-secondary text-center translucid p-3">Partner</h5>
       </div>
       <ul class="w75 d-flex justify-content-around mx-auto p-3 pt-0">
-        <li><a href="#"><img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 75px;"></a></li>
-        <li><a href="#"><img src="assets/WhiteWolfLogo.png" alt="white-wolf" style="width: auto; height: 75px;"></a></li>
-        <li><a href="#"><img src="assets/blizard.png" alt="blizzard" style="width: auto; height: 75px;"></a></li>
-        <li><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
+        <li class="pb-3"><a href="#"><img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 75px;"></a></li>
+        <li class="pb-3"><a href="#"><img src="assets/WhiteWolfLogo.png" alt="white-wolf" style="width: auto; height: 75px;"></a></li>
+        <li class="pb-3"><a href="#"><img src="assets/blizard.png" alt="blizzard" style="width: auto; height: 75px;"></a></li>
+        <li class="pb-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
       </ul>
     </div>
-
   </footer>
 </body>
 </html>
