setup top section, desktop version

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-light">
   <div class="dragon-bg position-absolute d-none d-md-block"></div>
-  <div class="fog position-absolute d-none d-md-block"></div>
+  <div class="fog-about position-absolute d-none d-md-block"></div>
   <header class="border-bottom border-primary d-none d-md-block">
     <div class="treasure position-absolute d-none d-md-block"> </div>
     <nav class="bg-dark translucid ">
@@ -44,14 +44,19 @@
             <i class="fas fa-scroll fa-2x"></i>
           </button>
         </nav>
+
+        <div class="d-none d-md-flex spacer-about"> </div>
         
         <section class="w75 mx-auto">
           <h4 class="text-primary lato text-center">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary text-center'>panAmerican fantasy convention 2021</h1>
           <p class='p-3 bg-light border border-white text-center'>
             Doggo ipsum big ol heckin pupperino stop it fren extremely cuuuuuute porgo wow such tempt, 
-            woofer extremely cuuuuuute smol ur givin me a spook such treat. H*ck smol borking doggo with a long snoot for 
-            pats doing me a frighten sub woofer, long bois long water shoob.
+            woofer extremely cuuuuuute smol ur givin me a spook such treat. H*ck smol borking doggo with a 
+            long snoot for pats doing me a frighten sub woofer, long bois long water shoob. Noodle horse 
+            porgo very hand that feed shibe tungg h*ck length boy doggorino borkf, blep woofer doing me a 
+            frighten woofer wow such tempt. smol you are doing me the shock adorable doggo. You are doing me 
+            a frighten snoot wow very biscit maximum borkdrive, tungg corgo.
           </p>
         </section>
 
