--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="w75 mx-auto">
           <h4 class="text-primary lato">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary'>panAmerican fantasy convention 2021</h1>
-          <p class='p-3 bg-light border border-white'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America and the World in Santiago, Chile.</p>
+          <p class='p-3 bg-light border border-white my-3'>An epic gathering to celebrate fantasy in music, games, art and fellowship. Meet other heroes from all over America and the World in Santiago, Chile.</p>
           <h3 >2021.01.16(SAT) - 17(SUN)</h3>
           <p>Estacion Mapocho (Mapocho Station), Santiago, Chile</p>
         </section>
