add sponsors (logo) section

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <section class="w75 mx-auto">
           <h4 class="text-primary lato text-center">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary text-center'>panAmerican fantasy convention 2021</h1>
-          <p class='p-3 bg-light border border-white text-center'>
+          <p class='p-3 bg-light border border-white text-center bg-white'>
             Doggo ipsum big ol heckin pupperino stop it fren extremely cuuuuuute porgo wow such tempt, 
             woofer extremely cuuuuuute smol ur givin me a spook such treat. H*ck smol borking doggo with a 
             long snoot for pats doing me a frighten sub woofer, long bois long water shoob. Noodle horse 
@@ -63,6 +63,42 @@
         <p class="text-center">Please contact us per Email for any further questions about the PanAmerican Fantasy Convention 2021!</p>
         <a class="text-center" href="#"><p>panfantasy2021@soulless_corp.com</p></a>
       </div>
+    </div>
+
+    <div class="bg-white">
+      <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
+        <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
+        <p class="text-center my-3">. I is not fat, i is fluffy making bread on the bathrobe sitting in a box, love cereal boxes
+           make for five star accommodation for cat jumps and falls onto the couch purrs and wakes up in 
+           a new dimension filled with kitty litter meow meow yummy there is a bunch of cats hanging 
+           around eating catnip so sleep over your phone and make cute snoring noises.</p>
+        
+        <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
+          <a href="#" class="my-3">
+            <img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 125px;">
+          </a>
+       </div>
+
+      <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
+        <a href="#" class="my-3">
+          <img src="assets/WhiteWolfLogo.png" alt="wizards" style="width: auto; height: 125px;">
+        </a>
+      </div>
+
+     <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
+      <a href="#" class="my-3">
+        <img src="assets/blizard.png" alt="wizards" style="width: auto; height: 125px;">
+      </a>
+    </div>
+
+    <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
+      <a href="#" class="my-3">
+        <img src="assets/NZ.png" alt="wizards" style="width: auto; height: 125px;">
+      </a>
+    </div>
+
+      </section>
+      
     </div>
 </main>
   
