fix sponsor's section item layout

--- a/about.html
+++ b/about.html
@@ -68,37 +68,39 @@
     <div class="bg-white">
       <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
         <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
+
         <p class="text-center my-3">. I is not fat, i is fluffy making bread on the bathrobe sitting in a box, love cereal boxes
            make for five star accommodation for cat jumps and falls onto the couch purrs and wakes up in 
            a new dimension filled with kitty litter meow meow yummy there is a bunch of cats hanging 
            around eating catnip so sleep over your phone and make cute snoring noises.</p>
         
-        <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
-          <a href="#" class="my-3">
-            <img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 125px;">
-          </a>
-       </div>
+        <div class="row">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+            <a href="#" class="my-3">
+              <img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 125px;">
+            </a>
+          </div>
 
-      <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
-        <a href="#" class="my-3">
-          <img src="assets/WhiteWolfLogo.png" alt="wizards" style="width: auto; height: 125px;">
-        </a>
-      </div>
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+            <a href="#" class="my-3">
+              <img src="assets/WhiteWolfLogo.png" alt="wizards" style="width: auto; height: 125px;">
+            </a>
+          </div>
 
-     <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
-      <a href="#" class="my-3">
-        <img src="assets/blizard.png" alt="wizards" style="width: auto; height: 125px;">
-      </a>
-    </div>
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+            <a href="#" class="my-3">
+              <img src="assets/blizard.png" alt="wizards" style="width: auto; height: 125px;">
+            </a>
+          </div>
 
-    <div class="sponsor-holder mx-auto d-flex justify-content-center my-3">
-      <a href="#" class="my-3">
-        <img src="assets/NZ.png" alt="wizards" style="width: auto; height: 125px;">
-      </a>
-    </div>
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+            <a href="#" class="my-3">
+              <img src="assets/NZ.png" alt="wizards" style="width: auto; height: 125px;">
+            </a>
+          </div>
+        </div>
 
       </section>
-      
     </div>
 </main>
   
