add related partners events section

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <section class="w75 mx-auto">
           <h4 class="text-primary lato text-center">"Adventurers gather forth!"</h4>
           <h1 class='uppercase text-primary text-center'>panAmerican fantasy convention 2021</h1>
-          <p class='p-3 bg-light border border-white text-center bg-white'>
+          <p class='p-3 bg-light border border-white text-center bg-light'>
             Doggo ipsum big ol heckin pupperino stop it fren extremely cuuuuuute porgo wow such tempt, 
             woofer extremely cuuuuuute smol ur givin me a spook such treat. H*ck smol borking doggo with a 
             long snoot for pats doing me a frighten sub woofer, long bois long water shoob. Noodle horse 
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="bg-white">
+    <div class="big-container">
       <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
         <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
 
@@ -100,6 +100,35 @@
           </div>
         </div>
 
+      </section>
+
+      <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
+        <h4 class="lato text-center">Related Partner Events</h4>
+
+        <p class="text-center my-3">. I is not fat, i is fluffy making bread on the bathrobe sitting in a box, love cereal boxes
+           make for five star accommodation</p>
+        
+        <div class="row">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2" style="max-width: 300px;">
+            <a href="#" class="sponsor-bg-blizz position-relative d-flex flex-column blizzcon">
+              <div class="red-fog position-absolute"></div>
+              <div class="my-auto">
+                <h3 class="text-center text-secondary">BLIZZCON</h3>
+                <h6 class="text-center text-secondary">Every Year</h6>
+              </div>
+            </a>
+          </div>
+
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2" style="max-width: 300px;">
+            <a href="#" class="sponsor-bg-wolf position-relative d-flex flex-column white-wolf">
+              <div class="red-fog position-absolute"></div>
+              <div class="my-auto">
+                <h3 class="text-center text-secondary">WOD LATAM</h3>
+                <h6 class="text-center text-secondary">2020</h6>
+              </div>
+            </a>
+          </div>
+        </div>
       </section>
     </div>
 </main>
