add white footer bar

--- a/about.html
+++ b/about.html
@@ -65,7 +65,8 @@
       </div>
     </div>
 
-    <div class="big-container">
+    <div class="big-container position-relative">
+      <div class="lion-bg position-absolute mt-5 d-none d-md-block"></div>
       <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
         <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
 
@@ -132,8 +133,24 @@
       </section>
     </div>
 </main>
+
   
-  <footer>
-  </footer>
+<footer class="d-flex flex-column">
+  <div class="bg-dark d-flex flex-column">
+  </div>
+  <div class="bg-md-dark">
+    <div class="w-75 d-flex py-3 mx-auto">
+      <div class="sponsor-holder mx-auto d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
+        <a href="#" class="my-3 d-flex align-items-center">
+          <img src="assets/wizards-logo.png" alt="wizards" class="py-auto" style="width: auto; height: 90px;">
+        </a>
+      </div>
+      <p class="text-small text-dark text-md-dark my-auto mx-3">
+        I is not fat, i is fluffy making bread on the bathrobe sitting in a box
+      </p>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
