add black footbar

--- a/about.html
+++ b/about.html
@@ -137,6 +137,15 @@
   
 <footer class="d-flex flex-column">
   <div class="bg-dark d-flex flex-column">
+    <div class="p-3 pb-0">
+      <h5 class="lato text-secondary text-center translucid p-3">Partner</h5>
+    </div>
+    <ul class="w75 d-flex flex-wrap justify-content-around mx-auto p-3 pt-0">
+      <li class="p-3"><a href="#"><img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 75px;"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/WhiteWolfLogo.png" alt="white-wolf" style="width: auto; height: 75px;"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/blizard.png" alt="blizzard" style="width: auto; height: 75px;"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
+    </ul>
   </div>
   <div class="bg-md-dark">
     <div class="w-75 d-flex py-3 mx-auto">
