fix bottom bar color in desktop view

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 
   
 <footer class="d-flex flex-column">
-  <div class="bg-dark d-flex flex-column">
+  <div class="bg-dark d-flex d-md-none flex-column">
     <div class="p-3 pb-0">
       <h5 class="lato text-secondary text-center translucid p-3">Partner</h5>
     </div>
@@ -147,14 +147,14 @@
       <li class="p-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
     </ul>
   </div>
-  <div class="bg-md-dark">
-    <div class="w-75 d-flex py-3 mx-auto">
-      <div class="sponsor-holder mx-auto d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
+  <div class="bot-bar-about">
+    <div class="w-75 d-flex py-3 mx-auto justify-content-center">
+      <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
         <a href="#" class="my-3 d-flex align-items-center">
           <img src="assets/wizards-logo.png" alt="wizards" class="py-auto" style="width: auto; height: 90px;">
         </a>
       </div>
-      <p class="text-small text-dark text-md-dark my-auto mx-3">
+      <p class="text-small my-auto mx-3">
         I is not fat, i is fluffy making bread on the bathrobe sitting in a box
       </p>
     </div>
