add ticket desktop grid

--- a/tickets.html
+++ b/tickets.html
@@ -54,6 +54,57 @@
           <p class="text-dark d-block d-md-none m-0">Select Day</p>
         </div>
 
+        <div class="ticket-grid-bg my-3">
+          <div class="ticket-grid m-2 bg-white">
+            <div class="cell top-cell">Ticket</div>
+            <div class="cell top-cell">1-Day Ticket</div>
+            <div class="cell top-cell extend-cell">2-Day-Ticket</div>
+            <div class="cell top-cell">Partners and Invitations</div>
+
+            <div class="cell">Date</div>
+            <div class="cell">Jan-16</div>
+            <div class="cell">Jan-17</div>
+            <div class="cell">Jan-16 + Jan 17</div>
+            <div class="cell">Jan-16 + Jan 17</div>
+
+            <div class="cell">Normal</div>
+            <div class="cell">
+              <h6 class="lato text-primary">$50</h6>
+              <input type="radio" id="Jan-16" value="Jan-16">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$70</h6>
+              <input type="radio" id="Jan-17" value="Jan-17">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$100</h6>
+              <input type="radio" id="Jan-16-17" value="Jan-16-17">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$0</h6>
+              <input type="radio" id="Invite" value="Invite">
+            </div>
+
+            <div class="cell">VIP</div>
+            <div class="cell">
+              <h6 class="lato text-primary">$70</h6>
+              <input type="radio" id="Jan-16-vip" value="Jan-16-vip">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$85</h6>
+              <input type="radio" id="Jan-17-vip" value="Jan-17-vip">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$140</h6>
+              <input type="radio" id="Jan-16-17-vip" value="Jan-16-17-vip">
+            </div>
+            <div class="cell">
+              <h6 class="lato text-primary">$0</h6>
+              <input type="radio" id="Invite-vip" value="Invite-vip">
+            </div>
+          </div>
+        </div>
+
       </section>
     </div>
 </main>
