--- a/tickets.html
+++ b/tickets.html
@@ -48,14 +48,14 @@
       <section class="w-75 w-md-50 mx-auto d-flex flex-column justify-content-center d-md-flex">
         <h4 class="lato text-center">Select Tickets</h4>
 
-        <div class="ticket-step p-3 d-md-flex flex-shrink-1 mx-auto my-3">
-          <p class="text-primary mx-2 my-0">&#8226; STEP 1</p>
+        <div class="ticket-step p-3 d-md-flex flex-shrink-1 mx-md-auto my-3">
+          <p class="text-primary mx-md-2 text-center my-0">&#8226; STEP 1</p>
           <p class="text-dark d-none d-md-block mx-2 my-0">Please select the day when you want to join PanAmerican Fantasy Convention 2021</p>
-          <p class="text-dark d-block d-md-none m-0">Select Day</p>
+          <p class="text-dark text-center d-block d-md-none m-0">Please Select Day of Assistance</p>
         </div>
 
-        <div class="ticket-grid-bg my-3">
-          <div class="ticket-grid m-2 bg-white">
+        <div class="ticket-grid-bg my-3 d-none d-md-block">
+          <div class="ticket-grid m-2">
             <div class="cell top-cell">Ticket</div>
             <div class="cell top-cell">1-Day Ticket</div>
             <div class="cell top-cell extend-cell">2-Day-Ticket</div>
@@ -70,41 +70,58 @@
             <div class="cell">Normal</div>
             <div class="cell">
               <h6 class="lato text-primary">$50</h6>
-              <input type="radio" id="Jan-16" value="Jan-16">
+              <input type="radio" id="Jan-16" value="Jan-16" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$70</h6>
-              <input type="radio" id="Jan-17" value="Jan-17">
+              <input type="radio" id="Jan-17" value="Jan-17" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$100</h6>
-              <input type="radio" id="Jan-16-17" value="Jan-16-17">
+              <input type="radio" id="Jan-16-17" value="Jan-16-17" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$0</h6>
-              <input type="radio" id="Invite" value="Invite">
+              <input type="radio" id="Invite" value="Invite" name="ticket">
             </div>
 
             <div class="cell">VIP</div>
             <div class="cell">
               <h6 class="lato text-primary">$70</h6>
-              <input type="radio" id="Jan-16-vip" value="Jan-16-vip">
+              <input type="radio" id="Jan-16-vip" value="Jan-16-vip" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$85</h6>
-              <input type="radio" id="Jan-17-vip" value="Jan-17-vip">
+              <input type="radio" id="Jan-17-vip" value="Jan-17-vip" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$140</h6>
-              <input type="radio" id="Jan-16-17-vip" value="Jan-16-17-vip">
+              <input type="radio" id="Jan-16-17-vip" value="Jan-16-17-vip" name="ticket">
             </div>
             <div class="cell">
               <h6 class="lato text-primary">$0</h6>
-              <input type="radio" id="Invite-vip" value="Invite-vip">
+              <input type="radio" id="Invite-vip" value="Invite-vip" name="ticket">
             </div>
           </div>
         </div>
 
+        <form class="d-md-none container-fluid">
+          <h3 class="lato text-primary text-center">$XX</h3>
+          <div class="row">
+            <h2 class="col-6 d-flex align-items-center">
+              <label class="lato mx-4">Jan-16</label>
+            </h2>
+            <input type="checkbox" class="check-day col-6 my-4">
+            <h2 class="col-6 d-flex align-items-center">
+              <label class="lato mx-4">Jan-17</label>
+            </h2>
+            <input type="checkbox" class="check-day col-6 my-4">            
+            <h2 class="col-6 d-flex align-items-center">
+              <label class="lato mx-4">VIP</label>
+            </h2>
+            <input type="checkbox" class="check-day col-6 my-4">
+          </div>
+        </form>
       </section>
     </div>
 </main>
