--- a/tickets.html
+++ b/tickets.html
@@ -123,6 +123,61 @@
           </div>
         </form>
       </section>
+
+      <section class="mx-auto border-top border-primary py-5">
+        <h4 class="lato text-center">Select Your Lunch</h4>
+        <div class="d-flex flex-column border border-secondary w-75 mx-auto my-3">
+          <div class="d-flex bg-light justify-content-center">
+            <h5 class="lato">January 16</h5>
+          </div>
+          <div class="d-flex bg-white align-items-center justify-content-around">
+            <div>
+              <label class="lato mx-4">menu 1</label>
+              <input type="radio" id="menu1-1-16" value="menu-1" name="menu-16">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 2</label>
+              <input type="radio" id="menu1-2-16" value="menu-2" name="menu-16">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 3</label>
+              <input type="radio" id="menu1-3-16" value="menu-3" name="menu-16">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 4</label>
+              <input type="radio" id="menu1-4-16" value="menu-4" name="menu-16">
+            </div>
+          </div>
+        </div>
+        <div class="d-flex flex-column border border-secondary w-75 mx-auto my-3">
+          <div class="d-flex bg-light justify-content-center">
+            <h5 class="lato">January 16</h5>
+          </div>
+          <div class="d-flex bg-white align-items-center justify-content-around">
+            <div>
+              <label class="lato mx-4">menu 1</label>
+              <input type="radio" id="menu1-1-17" value="menu-1" name="menu-17">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 2</label>
+              <input type="radio" id="menu1-2-17" value="menu-2" name="menu-17">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 3</label>
+              <input type="radio" id="menu1-3-17" value="menu-3" name="menu-17">
+            </div>
+            <div>
+              <label class="lato mx-4">menu 4</label>
+              <input type="radio" id="menu1-4-17" value="menu-4" name="menu-17">
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-primary py-3 px-5 my-4 text-secondary">PURCHASE</button>
+        </div>
+
+      </section>
     </div>
 </main>
 
