--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
           <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
         </a>
         <ul>
-          <li><a href='#'>Tickets</a></li>
-          <li><a href='#'>About</a></li>
+          <li><a href='./tickets.html'>Tickets</a></li>
+          <li><a href='./about.html'>About</a></li>
         </ul>
       </div> 
     </nav>
