--- a/tickets.html
+++ b/tickets.html
@@ -106,7 +106,7 @@
         </div>
 
         <form class="d-md-none container-fluid">
-          <h3 class="lato text-primary text-center">$XX</h3>
+          <h3 class="lato text-primary text-center mt-3">$XX</h3>
           <div class="row">
             <h2 class="col-6 d-flex align-items-center">
               <label class="lato mx-4">Jan-16</label>
@@ -130,22 +130,22 @@
           <div class="d-flex bg-light justify-content-center">
             <h5 class="lato">January 16</h5>
           </div>
-          <div class="d-flex bg-white align-items-center justify-content-around">
-            <div>
-              <label class="lato mx-4">menu 1</label>
-              <input type="radio" id="menu1-1-16" value="menu-1" name="menu-16">
+          <div class="menu">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 1</label>
+              <input type="radio" id="menu1-2-16" value="menu-1-16" name="menu-16" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 2</label>
-              <input type="radio" id="menu1-2-16" value="menu-2" name="menu-16">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 2</label>
+              <input type="radio" id="menu1-2-16" value="menu-2-16" name="menu-16" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 3</label>
-              <input type="radio" id="menu1-3-16" value="menu-3" name="menu-16">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 3</label>
+              <input type="radio" id="menu1-2-16" value="menu-3-16" name="menu-16" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 4</label>
-              <input type="radio" id="menu1-4-16" value="menu-4" name="menu-16">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 4</label>
+              <input type="radio" id="menu1-2-16" value="menu-4-16" name="menu-16" class="check-day mx-4">
             </div>
           </div>
         </div>
@@ -153,22 +153,22 @@
           <div class="d-flex bg-light justify-content-center">
             <h5 class="lato">January 17</h5>
           </div>
-          <div class="d-flex bg-white align-items-center justify-content-around">
-            <div>
-              <label class="lato mx-4">menu 1</label>
-              <input type="radio" id="menu1-1-17" value="menu-1" name="menu-17">
+          <div class="menu">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 1</label>
+              <input type="radio" id="menu1-2-16" value="menu-1-16" name="menu-17" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 2</label>
-              <input type="radio" id="menu1-2-17" value="menu-2" name="menu-17">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 2</label>
+              <input type="radio" id="menu1-2-16" value="menu-2-16" name="menu-17" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 3</label>
-              <input type="radio" id="menu1-3-17" value="menu-3" name="menu-17">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 3</label>
+              <input type="radio" id="menu1-2-16" value="menu-3-16" name="menu-17" class="check-day mx-4">
             </div>
-            <div>
-              <label class="lato mx-4">menu 4</label>
-              <input type="radio" id="menu1-4-17" value="menu-4" name="menu-17">
+            <div class="d-flex align-items-center my-md-2">
+              <label class="lato mx-4 my-3 my-md-0">menu 4</label>
+              <input type="radio" id="menu1-2-16" value="menu-4-16" name="menu-17" class="check-day mx-4">
             </div>
           </div>
         </div>
