fix duplicate id errors in tickets.html. Add link to index-html in all 3 pages

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </nav>
     <nav class="navbar bg-white p-0 translucid border">
       <div class="d-flex justify-content-between w75 p-0 my-0 mx-auto lato">
-        <a href="#" class="navbar-brand">
+        <a href="./index.html" class="navbar-brand">
           <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
         </a>
         <ul>
