--- a/tickets.html
+++ b/tickets.html
@@ -21,7 +21,7 @@
     </nav>
     <nav class="navbar bg-white p-0 translucid border">
       <div class="d-flex justify-content-between w75 p-0 my-0 mx-auto lato">
-        <a href="#" class="navbar-brand">
+        <a href="./index.html" class="navbar-brand">
           <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
         </a>
         <ul>
@@ -133,19 +133,19 @@
           <div class="menu">
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 1</label>
-              <input type="radio" id="menu1-2-16" value="menu-1-16" name="menu-16" class="check-day mx-4">
+              <input type="radio" id="menu-1-16" value="menu-1-16" name="menu-16" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 2</label>
-              <input type="radio" id="menu1-2-16" value="menu-2-16" name="menu-16" class="check-day mx-4">
+              <input type="radio" id="menu-2-16" value="menu-2-16" name="menu-16" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 3</label>
-              <input type="radio" id="menu1-2-16" value="menu-3-16" name="menu-16" class="check-day mx-4">
+              <input type="radio" id="menu-3-16" value="menu-3-16" name="menu-16" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 4</label>
-              <input type="radio" id="menu1-2-16" value="menu-4-16" name="menu-16" class="check-day mx-4">
+              <input type="radio" id="menu-4-16" value="menu-4-16" name="menu-16" class="check-day mx-4">
             </div>
           </div>
         </div>
@@ -156,19 +156,19 @@
           <div class="menu">
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 1</label>
-              <input type="radio" id="menu1-2-16" value="menu-1-16" name="menu-17" class="check-day mx-4">
+              <input type="radio" id="menu-1-17" value="menu-1-17" name="menu-17" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 2</label>
-              <input type="radio" id="menu1-2-16" value="menu-2-16" name="menu-17" class="check-day mx-4">
+              <input type="radio" id="menu-2-17" value="menu-2-17" name="menu-17" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 3</label>
-              <input type="radio" id="menu1-2-16" value="menu-3-16" name="menu-17" class="check-day mx-4">
+              <input type="radio" id="menu1-3-17" value="menu-3-17" name="menu-17" class="check-day mx-4">
             </div>
             <div class="d-flex align-items-center my-md-2">
               <label class="lato mx-4 my-3 my-md-0">menu 4</label>
-              <input type="radio" id="menu1-2-16" value="menu-4-16" name="menu-17" class="check-day mx-4">
+              <input type="radio" id="menu1-4-17" value="menu-4-17" name="menu-17" class="check-day mx-4">
             </div>
           </div>
         </div>
