add thanks to the Readme.md

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <section class="position-relative">
       <div class="beholder-bg position-absolute"></div>
-      <div class="dark-bg position-absolute" style="opacity: 0.4;"></div>
+      <div class="dark-bg position-absolute"></div>
       <div class="program-grid mx-3 mx-md-auto mt-3 w75">
         <h2 class="text-secondary mx-auto lato p-3 program-title align-self-center">Adventure Plan</h2>
         <article class="row position-relative p-3 dragon">
