--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
         <li class="pb-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
       </ul>
     </div>
+    <div class="bot-bar-about bg-light text-dark">
+      <div class="w-75 d-flex py-3 mx-auto justify-content-center">
+        <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
+          <a href="#" class="my-3 d-flex align-items-center">
+            <img src="assets/wizards-logo.png" alt="wizards" class="py-auto" style="width: auto; height: 90px;">
+          </a>
+        </div>
+        <p class="text-small my-auto mx-3">
+          I is not fat, i is fluffy making bread on the bathrobe sitting in a box
+        </p>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
