--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <nav class="navbar bg-white p-0 translucid border">
       <div class="d-flex justify-content-between w75 p-0 my-0 mx-auto lato">
         <a href="./index.html" class="navbar-brand">
-          <img src="assets/wizards-logo.png" style="width: auto; height: 50px;" alt="wizards logo">
+          <img src="assets/wizards-logo.png" alt="wizards logo" class="nav-logo">
         </a>
         <ul>
           <li><a href='./tickets.html'>Tickets</a></li>
