--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <!--mobile navbar. Should be a dropdown, but that's JS-->
         <nav class='d-md-none d-flex justify-content-start pb-5'>
-          <button class='btn btn-link text-dark bg-secondary translucid' type='button' style="border-radius: 50%;">
+          <button class='btn btn-link text-dark bg-secondary translucid border-radius-50' type='button'>
             <i class="fas fa-scroll fa-2x"></i>
           </button>
         </nav>
@@ -93,7 +93,7 @@
           <div class="col-7 col-md-12 text-secondary d-flex"><p>See the original artifacts wielded by the fellowship</p></div>
         </article>
         <button class="bg-primary text-secondary p-5 m-5 d-md-none">Join PanAmerican Fantasy Convention 2021</button>
-        <h6 class="align-self-center mx-auto program-link d-none d-md-block" style="text-decoration: underline; text-transform: uppercase;"><a href="#" class="text-secondary">see the whole program</a></h6>
+        <h6 class="align-self-center mx-auto program-link d-none d-md-block"><a href="#" class="text-secondary program-link">see the whole program</a></h6>
       </div>
     </section>
 
@@ -103,7 +103,7 @@
       <div class="speakers mx-3 mx-md-auto mt-3 w75 row">
         <div class="col-md-6 row position-relative">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2 speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>Lucca Turilli</h5>
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-6 row position-relative">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2 speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>John Rhys-Davies</h5>
@@ -123,7 +123,7 @@
         </div>
         <div class="col-md-6 row position-relative d-none d-md-flex">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2  speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>Lucca Turilli</h5>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-md-6 row position-relative d-none d-md-flex">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2  speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>John Rhys-Davies</h5>
@@ -143,7 +143,7 @@
         </div>
         <div class="col-md-6 row position-relative d-none d-md-flex">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/turilli.jpg" class="rounded-circle border border-primary p-2  speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>Lucca Turilli</h5>
@@ -153,7 +153,7 @@
         </div>
         <div class="col-md-6 row position-relative d-none d-md-flex">
           <div class="col-4 d-flex align-items-center justify-content-center">
-            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2" alt="turilli" style="height: 90px; width: 90px;">
+            <img src="assets/gimli.jpeg" class="rounded-circle border border-primary p-2  speaker-portrait" alt="turilli">
           </div>
           <div class="col-8 p-2">
             <h5>John Rhys-Davies</h5>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="d-flex d-md-none border border-dark justify-content-center">
-          <button class='btn btn-link text-dark lato' style="text-decoration: none;" type='button'>MORE</button>
+          <button class='btn btn-link text-dark lato speaker-more' type='button'>more</button>
         </div>
       </div>
     </section>
