do main section of about.html

--- a/about.html
+++ b/about.html
@@ -76,27 +76,27 @@
            around eating catnip so sleep over your phone and make cute snoring noises.</p>
         
         <div class="row">
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2">
             <a href="#" class="my-3">
-              <img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 125px;">
+              <img src="assets/wizards-logo.png" alt="wizards" class="sponsor-pic">
             </a>
           </div>
 
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2">
             <a href="#" class="my-3">
-              <img src="assets/WhiteWolfLogo.png" alt="wizards" style="width: auto; height: 125px;">
+              <img src="assets/WhiteWolfLogo.png" alt="wizards" class="sponsor-pic">
             </a>
           </div>
 
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2">
             <a href="#" class="my-3">
-              <img src="assets/blizard.png" alt="wizards" style="width: auto; height: 125px;">
+              <img src="assets/blizard.png" alt="wizards" class="sponsor-pic">
             </a>
           </div>
 
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 col-md-6 mx-2">
             <a href="#" class="my-3">
-              <img src="assets/NZ.png" alt="wizards" style="width: auto; height: 125px;">
+              <img src="assets/NZ.png" alt="wizards" class="sponsor-pic">
             </a>
           </div>
         </div>
@@ -110,7 +110,7 @@
            make for five star accommodation</p>
         
         <div class="row">
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
             <a href="#" class="sponsor-bg-blizz position-relative d-flex flex-column blizzcon">
               <div class="red-fog position-absolute"></div>
               <div class="my-auto">
