--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
             </a>
           </div>
 
-          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2" style="max-width: 300px;">
+          <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
             <a href="#" class="sponsor-bg-wolf position-relative d-flex flex-column white-wolf">
               <div class="red-fog position-absolute"></div>
               <div class="my-auto">
