--- a/about.html
+++ b/about.html
@@ -141,17 +141,17 @@
       <h5 class="lato text-secondary text-center translucid p-3">Partner</h5>
     </div>
     <ul class="w75 d-flex flex-wrap justify-content-around mx-auto p-3 pt-0">
-      <li class="p-3"><a href="#"><img src="assets/wizards-logo.png" alt="wizards" style="width: auto; height: 75px;"></a></li>
-      <li class="p-3"><a href="#"><img src="assets/WhiteWolfLogo.png" alt="white-wolf" style="width: auto; height: 75px;"></a></li>
-      <li class="p-3"><a href="#"><img src="assets/blizard.png" alt="blizzard" style="width: auto; height: 75px;"></a></li>
-      <li class="p-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" style="width: auto; height: 75px;"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/wizards-logo.png" alt="wizards" class="footer-logo"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/WhiteWolfLogo.png" alt="white-wolf" class="footer-logo"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/blizard.png" alt="blizzard" class="footer-logo"></a></li>
+      <li class="p-3"><a href="#"><img src="assets/NZ.png" alt="NZ-Tourism" class="footer-logo"></a></li>
     </ul>
   </div>
   <div class="bot-bar-about">
     <div class="w-75 d-flex py-3 mx-auto justify-content-center">
       <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
         <a href="#" class="my-3 d-flex align-items-center">
-          <img src="assets/wizards-logo.png" alt="wizards" class="py-auto" style="width: auto; height: 90px;">
+          <img src="assets/wizards-logo.png" alt="wizards" class="py-auto footer-bottom-logo">
         </a>
       </div>
       <p class="text-small my-auto mx-3">
