--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
   </div>
   <div class="bot-bar-about">
     <div class="w-75 d-flex py-3 mx-auto justify-content-center">
-      <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0" style="max-width: 300px;">
+      <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0">
         <a href="#" class="my-3 d-flex align-items-center">
           <img src="assets/wizards-logo.png" alt="wizards" class="py-auto footer-bottom-logo">
         </a>
