--- a/tickets.html
+++ b/tickets.html
@@ -37,7 +37,7 @@
       <div class='m-2 mb-0 pb-5'>        
         <!--mobile navbar. Should be a dropdown, but that's JS-->
         <nav class='d-md-none d-flex justify-content-start'>
-          <button class='btn btn-link text-dark bg-secondary translucid' type='button' style="border-radius: 50%;">
+          <button class='btn btn-link text-dark bg-secondary translucid  border-radius-50' type='button'>
             <i class="fas fa-scroll fa-2x"></i>
           </button>
         </nav>
