remove position-absolute from backgrounds

--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="bg-light">
-  <div class="dragon-bg position-absolute d-none d-md-block"></div>
-  <div class="fog-about position-absolute d-none d-md-block"></div>
+  <div class="dragon-bg d-none d-md-block"></div>
+  <div class="fog-about d-none d-md-block"></div>
   <header class="border-bottom border-primary d-none d-md-block">
-    <div class="treasure position-absolute d-none d-md-block"> </div>
+    <div class="treasure d-none d-md-block"> </div>
     <nav class="bg-dark translucid ">
       <ul class='d-flex justify-content-end w75 p-0 my-0 mx-auto lato'>
         <li><a href='#' class="text-secondary"><i class="fab fa-facebook-f"></i></a></li>
@@ -35,8 +35,8 @@
   <main class="row m-md-auto">
     <div class="top-section col-12">
       <div class='m-2 mb-0 pb-5'>
-        <div class="dragon-bg position-absolute d-md-none"></div>
-        <div class="fog-about position-absolute d-md-none"></div>
+        <div class="dragon-bg d-md-none"></div>
+        <div class="fog-about d-md-none"></div>
         
         <!--mobile navbar. Should be a dropdown, but that's JS-->
         <nav class='d-md-none d-flex justify-content-start pb-5'>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="big-container position-relative">
-      <div class="lion-bg position-absolute mt-5 d-none d-md-block"></div>
+      <div class="lion-bg mt-5 d-none d-md-block"></div>
       <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
         <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
 
@@ -112,7 +112,7 @@
         <div class="row">
           <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
             <a href="#" class="sponsor-bg-blizz position-relative d-flex flex-column blizzcon">
-              <div class="red-fog position-absolute"></div>
+              <div class="red-fog"></div>
               <div class="my-auto">
                 <h3 class="text-center text-secondary">BLIZZCON</h3>
                 <h6 class="text-center text-secondary">Every Year</h6>
@@ -122,7 +122,7 @@
 
           <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
             <a href="#" class="sponsor-bg-wolf position-relative d-flex flex-column white-wolf">
-              <div class="red-fog position-absolute"></div>
+              <div class="red-fog"></div>
               <div class="my-auto">
                 <h3 class="text-center text-secondary">WOD LATAM</h3>
                 <h6 class="text-center text-secondary">2020</h6>
